Add entites for APC UPS

--- a/recorder.yaml
+++ b/recorder.yaml
@@ -8,6 +8,7 @@ include:
     - person
     - media_player
   entity_globs:
+    - sensor.apc*
     - sensor.temperature*
     - sensor.humidity*
     - sensor.heating*
