--- a/sensor.yaml
+++ b/sensor.yaml
@@ -310,36 +310,36 @@
         {% endif %}
   
         {{ as_timestamp(states('sensor.last_boot')) | timestamp_custom('%H:%M on %a') }} {{ date }} {{ as_timestamp(states('sensor.last_boot')) | timestamp_custom('%b %Y') }}
-    xreosi_petrelaiou_emeis:
-      friendly_name: "Χρέωση Πετρελαίου Εμείς"
-      value_template: >-
-        {% set a = (states('sensor.petrelaio_makis') | float ) %}
-        {% set b = (states('sensor.petrelaio_leonidas') | float ) %}
-        {% set c = (states('sensor.petrelaio_sofita') | float ) %}
-        {% set K = (states('sensor.katanalosi_kaustira') | float ) %}
-        {% set i = (states('input_number.oriaia_katanalose_kaustera') | float ) %}
-        {% set P = (states('input_number.time_petrelaiou') | float ) %}
-        {{'%0.2f'|format(i*P*K*a/(a+b+c))}}
-    xreosi_petrelaiou_leonidas:
-      friendly_name: "Χρέωση Πετρελαίου Λεωνίδας"
-      value_template: >-
-        {% set a = (states('sensor.petrelaio_makis') | float ) %}
-        {% set b = (states('sensor.petrelaio_leonidas') | float ) %}
-        {% set c = (states('sensor.petrelaio_sofita') | float ) %}
-        {% set K = (states('sensor.katanalosi_kaustira') | float ) %}
-        {% set i = (states('input_number.oriaia_katanalose_kaustera') | float ) %}
-        {% set P = (states('input_number.time_petrelaiou') | float ) %}
-        {{'%0.2f'|format(i*P*K*b/(a+b+c))}}
-    xreosi_petrelaiou_sophita:
-      friendly_name: "Χρέωση Πετρελαίου Σοφίτα"
-      value_template: >-
-        {% set a = (states('sensor.petrelaio_makis') | float ) %}
-        {% set b = (states('sensor.petrelaio_leonidas') | float ) %}
-        {% set c = (states('sensor.petrelaio_sofita') | float ) %}
-        {% set K = (states('sensor.katanalosi_kaustira') | float ) %}
-        {% set i = (states('input_number.oriaia_katanalose_kaustera') | float ) %}
-        {% set P = (states('input_number.time_petrelaiou') | float ) %}
-        {{'%0.2f'|format(i*P*K*c/(a+b+c))}}
+    # xreosi_petrelaiou_emeis:
+    #   friendly_name: "Χρέωση Πετρελαίου Εμείς"
+    #   value_template: >-
+    #     {% set a = (states('sensor.petrelaio_makis') | float ) %}
+    #     {% set b = (states('sensor.petrelaio_leonidas') | float ) %}
+    #     {% set c = (states('sensor.petrelaio_sofita') | float ) %}
+    #     {% set K = (states('sensor.katanalosi_kaustira') | float ) %}
+    #     {% set i = (states('input_number.oriaia_katanalose_kaustera') | float ) %}
+    #     {% set P = (states('input_number.time_petrelaiou') | float ) %}
+    #     {{'%0.2f'|format(i*P*K*a/(a+b+c))}}
+    # xreosi_petrelaiou_leonidas:
+    #   friendly_name: "Χρέωση Πετρελαίου Λεωνίδας"
+    #   value_template: >-
+    #     {% set a = (states('sensor.petrelaio_makis') | float ) %}
+    #     {% set b = (states('sensor.petrelaio_leonidas') | float ) %}
+    #     {% set c = (states('sensor.petrelaio_sofita') | float ) %}
+    #     {% set K = (states('sensor.katanalosi_kaustira') | float ) %}
+    #     {% set i = (states('input_number.oriaia_katanalose_kaustera') | float ) %}
+    #     {% set P = (states('input_number.time_petrelaiou') | float ) %}
+    #     {{'%0.2f'|format(i*P*K*b/(a+b+c))}}
+    # xreosi_petrelaiou_sophita:
+    #   friendly_name: "Χρέωση Πετρελαίου Σοφίτα"
+    #   value_template: >-
+    #     {% set a = (states('sensor.petrelaio_makis') | float ) %}
+    #     {% set b = (states('sensor.petrelaio_leonidas') | float ) %}
+    #     {% set c = (states('sensor.petrelaio_sofita') | float ) %}
+    #     {% set K = (states('sensor.katanalosi_kaustira') | float ) %}
+    #     {% set i = (states('input_number.oriaia_katanalose_kaustera') | float ) %}
+    #     {% set P = (states('input_number.time_petrelaiou') | float ) %}
+    #     {{'%0.2f'|format(i*P*K*c/(a+b+c))}}
     # Sensor for Home Assistant difference between start and shutdown times.
     restart_time:
       friendly_name: Restart Time
