--- a/rest_command.yaml
+++ b/rest_command.yaml
@@ -15,3 +15,9 @@ assistant_relay:
   method: POST
   content_type: 'application/json'
   payload: '{"command":"{{ command }}", "user":"username"}'
+
+# twillio_studio_api:
+#   url: https://AC897039a8bc97e70d3f61eaef95153261:58f6e3155a6e970d928048049cc19944@studio.twilio.com/v2/Flows/FWc0a2e8c66777232e1da11c47463e8246/Executions
+#   method: POST
+#   payload: '--data-urlencode {"To":"{{ To }}", --data-urlencode "From":"{{ From }}"}'
+  
