Microsoft Greek Neural TTS

--- a/shell_command.yaml
+++ b/shell_command.yaml
@@ -1,3 +1,5 @@
 twilio_sms: "/config/helpers/send-sms '{{ recipient_number }}' '{{ body }}' 'twilio_number:{{twilio_number}}'"
 
 twilio_phone: "/config/helpers/make-call '{{ recipient_number }}' '{{ twilio_flow }}' 'twilio_number:{{twilio_number}}'"
+
+microsoft_tts: "/config/helpers/microsoft-speech '{{text}}'"
