--- a/amazon_alexa.yaml
+++ b/amazon_alexa.yaml
@@ -5,12 +5,16 @@ smart_home:
     client_secret: !secret alexa_client_secret
     filter:
       include_entities:
+        - switch.provoleas_led
+        - switch.provoleas_aristera
+        - script.ram
         - binary_sensor.pir_kouzina
         - binary_sensor.saloni_pir
         - binary_sensor.pir_sensor
         - binary_sensor.porta_spitiou
         - binary_sensor.eksoporta
         - humidifier.midea_dehumidifier_18691697727728
+        - input_boolean.restart_home_assistant
       include_entity_globs:
         - sensor.humidity*
         - sensor.temperature*
