--- a/cameras/geovision.yaml
+++ b/cameras/geovision.yaml
@@ -1,25 +1,25 @@
 # All Geovision Camera arround the hosue. Each camera connected with rtsp url (ffmpeg) and with http url (mjpeg)
 # MJPEG seems to be running significantly smoother and immedietlimmediately compared to RTSP. Able to run all 6 cameras in one view as MJPEG with almost no CPU load
-  - platform: ffmpeg
-    name: Kouzina_rtsp
-    input: !secret kouzina_url
-  - platform: ffmpeg
-    name: Kipos_rtsp
-    input: !secret kipos_url
-  - platform: ffmpeg
-    name: Eisodos_rtsp
-    input: !secret eisodos_url
-  - platform: ffmpeg
-    name: Eisodos_HD_rtsp
-    input: !secret eisodos_hd_url
+  # - platform: ffmpeg
+  #   name: Kouzina_rtsp
+  #   input: !secret kouzina_url
+  # - platform: ffmpeg
+  #   name: Kipos_rtsp
+  #   input: !secret kipos_url
+  # - platform: ffmpeg
+  #   name: Eisodos_rtsp
+  #   input: !secret eisodos_url
+  # - platform: ffmpeg
+  #   name: Eisodos_HD_rtsp
+  #   input: !secret eisodos_hd_url
   # - platform: onvif
   #   host: 192.168.1.103
   #   username: 
   #   password: 
   #   port: 80
-  - platform: ffmpeg
-    name: Veranta_rtsp
-    input: !secret extra_url
+  # - platform: ffmpeg
+  #   name: Veranta_rtsp
+  #   input: !secret extra_url
 
 #MJPEG streams
   - platform: generic
